--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
-    <link rel="apple-touch-icon" href="/assets/favicon/favicon-touch-57.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/favicon-touch-72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon/favicon-touch-114.png">
-    <link rel="stylesheet" href="/theme.css">
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" href="assets/favicon/favicon-touch-57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/favicon-touch-72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/favicon-touch-114.png">
+    <link rel="stylesheet" href="theme.css">
     <title>OptionFactory</title>
 
     <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
