--- a/index.html
+++ b/index.html
@@ -102,6 +102,26 @@
         </div>
     </div>
 
+    <div class="curses">
+        <img src="assets/imgs/divider-curses.svg" alt="wave divider" class="divider divider-curses">
+        <div class="content">
+            <div class="logos">
+                <img src="assets/curses/cyberark.png" alt="cyberark logo">
+                <img src="assets/curses/kubernetes.png" alt="kubernetes logo">
+                <img src="assets/curses/mongo.png" alt="mongo logo">
+                <img src="assets/curses/php.png" alt="php logo">
+                <img src="assets/curses/mssql.png" alt="mssql logo">
+                <img src="assets/curses/node.png" alt="node logo">
+            </div>
+            <div class="text-container">
+                <h2>Curses</h2>
+                <h3>The customer is always right</h3>
+                <p>We accommodate customer's willing. There's always multiple ways to archive the wanted result but sometime there's the 'need' for a specific tech stack.</p>
+                <p>Here's some solutions we master, even against our willing.</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
