:lipstick: team section enhancements

--- a/index.html
+++ b/index.html
@@ -131,77 +131,77 @@
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Lorem.svg" alt="Lorem" class="avatar">
                     <p class="name">Lorem</p>
-                    <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nesciunt, accusamus esse veritatis commodi debitis illum dolorem, qui ex tempora nobis nulla sed maiores quisquam eligendi, beatae rerum at laborum.</p>
+                    <p class="bio"><b>&lt;!--</b> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nesciunt, accusamus esse veritatis commodi debitis illum dolorem, qui ex tempora nobis nulla sed maiores quisquam eligendi, beatae rerum at laborum. <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Enim.svg" alt="Enim" class="avatar">
                     <p class="name">Enim</p>
-                    <p class="bio">Est voluptatibus libero blanditiis quod quasi cum laborum iure. Facere accusantium fugit est minus? Modi, iusto dolores quod officia autem dolore quis debitis ad nemo maiores corrupti recusandae pariatur nostrum.</p>
+                    <p class="bio"><b>&lt;!--</b> Est voluptatibus libero blanditiis quod quasi cum laborum iure. Facere accusantium fugit est minus? Modi, iusto dolores quod officia autem dolore quis debitis ad nemo maiores corrupti recusandae pariatur nostrum. <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Iste.svg" alt="Iste" class="avatar">
                     <p class="name">Iste</p>
-                    <p class="bio">Est quibusdam doloremque accusamus soluta culpa vitae velit. Veritatis incidunt consequuntur optio, voluptatum distinctio quam ad blanditiis nobis fugit explicabo dolorem animi tempore voluptas neque ipsum qui earum vero amet.</p>
+                    <p class="bio"><b>&lt;!--</b> Est quibusdam doloremque accusamus soluta culpa vitae velit. Veritatis incidunt consequuntur optio, voluptatum distinctio quam ad blanditiis nobis fugit explicabo dolorem animi tempore voluptas neque ipsum qui earum vero amet. <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Incidunt.svg" alt="Incidunt" class="avatar">
                     <p class="name">Incidunt</p>
-                    <p class="bio">Accusantium blanditiis repellat necessitatibus aspernatur hic odit suscipit unde, voluptas, aliquid error non nemo sunt. A exercitationem iure dolores possimus in nihil natus neque, non tenetur quae, quaerat, itaque saepe?</p>
+                    <p class="bio"><b>&lt;!--</b> Accusantium blanditiis repellat necessitatibus aspernatur hic odit suscipit unde, voluptas, aliquid error non nemo sunt. A exercitationem iure dolores possimus in nihil natus neque, non tenetur quae, quaerat, itaque saepe? <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Iusto.svg" alt="Iusto" class="avatar">
                     <p class="name">Iusto</p>
-                    <p class="bio">Labore adipisci tempora maiores. Modi dicta doloribus soluta necessitatibus sunt, ipsum recusandae quasi fuga optio cumque iste fugit officia ex, dignissimos quaerat? Labore fugiat velit, provident deserunt pariatur mollitia molestias!</p>
+                    <p class="bio"><b>&lt;!--</b> Labore adipisci tempora maiores. Modi dicta doloribus soluta necessitatibus sunt, ipsum recusandae quasi fuga optio cumque iste fugit officia ex, dignissimos quaerat? Labore fugiat velit, provident deserunt pariatur mollitia molestias! <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Doloremque.svg" alt="Doloremque" class="avatar">
                     <p class="name">Doloremque</p>
-                    <p class="bio">Nisi excepturi delectus libero dignissimos natus. Placeat voluptate, a atque dolor eos laborum ad pariatur eum laboriosam architecto temporibus iure, alias necessitatibus earum, distinctio quo molestiae nam perferendis vitae magnam!</p>
+                    <p class="bio"><b>&lt;!--</b> Nisi excepturi delectus libero dignissimos natus. Placeat voluptate, a atque dolor eos laborum ad pariatur eum laboriosam architecto temporibus iure, alias necessitatibus earum, distinctio quo molestiae nam perferendis vitae magnam! <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Nemo.svg" alt="Nemo" class="avatar">
                     <p class="name">Nemo</p>
-                    <p class="bio">Odit, recusandae tenetur et eum sint numquam laboriosam animi eius sed est nihil blanditiis cum, soluta vel, reprehenderit illo eaque aliquid laudantium? Hic perferendis excepturi laboriosam dolores eum possimus eligendi!</p>
+                    <p class="bio"><b>&lt;!--</b> Odit, recusandae tenetur et eum sint numquam laboriosam animi eius sed est nihil blanditiis cum, soluta vel, reprehenderit illo eaque aliquid laudantium? Hic perferendis excepturi laboriosam dolores eum possimus eligendi! <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Sequi.svg" alt="Sequi" class="avatar">
                     <p class="name">Sequi</p>
-                    <p class="bio">Distinctio consequuntur deleniti itaque, tempora amet eum exercitationem? Voluptatibus maxime facilis nam ea blanditiis atque error iste, beatae nostrum cumque vel, possimus adipisci quaerat aliquam! Pariatur nemo explicabo qui sit?</p>
+                    <p class="bio"><b>&lt;!--</b> Distinctio consequuntur deleniti itaque, tempora amet eum exercitationem? Voluptatibus maxime facilis nam ea blanditiis atque error iste, beatae nostrum cumque vel, possimus adipisci quaerat aliquam! Pariatur nemo explicabo qui sit? <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Ab.svg" alt="Ab" class="avatar">
                     <p class="name">Ab</p>
-                    <p class="bio">Est vero asperiores non ullam nulla facere optio quam perferendis laborum illum? Nam tempora ipsa minima voluptatum architecto minus, eum ullam at ea commodi ab qui incidunt praesentium voluptates perspiciatis.</p>
+                    <p class="bio"><b>&lt;!--</b> Est vero asperiores non ullam nulla facere optio quam perferendis laborum illum? Nam tempora ipsa minima voluptatum architecto minus, eum ullam at ea commodi ab qui incidunt praesentium voluptates perspiciatis. <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Deleniti.svg" alt="Deleniti" class="avatar">
                     <p class="name">Deleniti</p>
-                    <p class="bio">Voluptas, assumenda illum sapiente dolorum pariatur, voluptates adipisci corrupti quisquam quo beatae dolores architecto aperiam labore odit iste fugit! Reiciendis molestiae aliquam animi eius beatae error totam, a reprehenderit? Assumenda!</p>
+                    <p class="bio"><b>&lt;!--</b> Voluptas, assumenda illum sapiente dolorum pariatur, voluptates adipisci corrupti quisquam quo beatae dolores architecto aperiam labore odit iste fugit! Reiciendis molestiae aliquam animi eius beatae error totam, a reprehenderit? Assumenda! <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Exercitationem.svg" alt="Exercitationem" class="avatar">
                     <p class="name">Exercitationem</p>
-                    <p class="bio">Impedit cum eaque itaque soluta dicta minus assumenda, deleniti fuga ex veritatis quisquam quis in nemo, illo, quasi est consequuntur sapiente sed. Ipsa aliquam nihil ratione saepe voluptas velit error?</p>
+                    <p class="bio"><b>&lt;!--</b> Impedit cum eaque itaque soluta dicta minus assumenda, deleniti fuga ex veritatis quisquam quis in nemo, illo, quasi est consequuntur sapiente sed. Ipsa aliquam nihil ratione saepe voluptas velit error? <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Magnam.svg" alt="Magnam" class="avatar">
                     <p class="name">Magnam</p>
-                    <p class="bio">Sapiente asperiores perferendis suscipit, repellendus eum deserunt, quidem blanditiis similique ad fuga corrupti pariatur odio quas quibusdam amet eos corporis molestias voluptatem alias? Aliquam sequi ducimus, officiis quis non excepturi?</p>
+                    <p class="bio"><b>&lt;!--</b> Sapiente asperiores perferendis suscipit, repellendus eum deserunt, quidem blanditiis similique ad fuga corrupti pariatur odio quas quibusdam amet eos corporis molestias voluptatem alias? Aliquam sequi ducimus, officiis quis non excepturi? <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Dolorum.svg" alt="Dolorum" class="avatar">
                     <p class="name">Dolorum</p>
-                    <p class="bio">Laudantium mollitia libero impedit nobis, voluptatibus error aliquid minus commodi officia nemo. Recusandae nemo reiciendis debitis dolorem tenetur quod! Aliquam aperiam sed optio inventore ex necessitatibus porro eius provident repellendus.</p>
+                    <p class="bio"><b>&lt;!--</b> Laudantium mollitia libero impedit nobis, voluptatibus error aliquid minus commodi officia nemo. Recusandae nemo reiciendis debitis dolorem tenetur quod! Aliquam aperiam sed optio inventore ex necessitatibus porro eius provident repellendus. <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Ipsa.svg" alt="Ipsa" class="avatar">
                     <p class="name">Ipsa</p>
-                    <p class="bio">Blanditiis, corporis itaque! Id ipsum natus quasi! Aliquid praesentium culpa nihil, facere totam iusto provident? Adipisci, ad facilis molestias a culpa amet, praesentium vel necessitatibus hic debitis et aut quos?</p>
+                    <p class="bio"><b>&lt;!--</b> Blanditiis, corporis itaque! Id ipsum natus quasi! Aliquid praesentium culpa nihil, facere totam iusto provident? Adipisci, ad facilis molestias a culpa amet, praesentium vel necessitatibus hic debitis et aut quos? <b>--></b> </p>
                 </div>
                 <div class="member">
                     <img src="https://avatars.dicebear.com/api/big-smile/Totam.svg" alt="Totam" class="avatar">
                     <p class="name">Totam</p>
-                    <p class="bio">Impedit repudiandae, voluptas fugit ab maxime optio omnis autem voluptates dolorum, tempore perspiciatis mollitia itaque, voluptate doloribus iure alias voluptatibus consequatur temporibus veritatis sit molestiae accusamus. Fuga, iusto itaque. Molestias.</p>
+                    <p class="bio"><b>&lt;!--</b> Impedit repudiandae, voluptas fugit ab maxime optio omnis autem voluptates dolorum, tempore perspiciatis mollitia itaque, voluptate doloribus iure alias voluptatibus consequatur temporibus veritatis sit molestiae accusamus. Fuga, iusto itaque. Molestias. <b>--></b> </p>
                 </div>
             </div>
         </div>
